tests/snapshots/network_list__mainnet_test.snap
---
source: tests/network_list.rs
expression: "&response.network_identifiers"
---
[
    NetworkIdentifier {
        blockchain: "mina",
        network: "mainnet",
        sub_network_identifier: None,
    },
]
