tests/snapshots/network_list__network_list.snap
---
source: tests/network_list.rs
expression: "&response.network_identifiers"
---
[
    NetworkIdentifier {
        blockchain: "mina",
        network: "devnet",
        sub_network_identifier: None,
    },
]
